rearrange maven dependencies and add jacoco code coverage : omidashouri : 98.09.13